--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   </head>
   <body>
 
+  <div id="view">Default</div>
+
+  <form id="switch-view-form">
+    <input type="radio" name="view" value="totalpopulation" checked> Total Population<br>
+    <input type="radio" name="view" value="birthrate"> Birth Rate<br>
+    <input type="radio" name="view" value="deathrate"> Death Rate
+    <input type="submit" name="getVal">Change View</input>
+  </form>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
   <script src="https://d3js.org/d3-array.v1.min.js"></script>
@@ -23,6 +32,5 @@
   <div id="container" style="position: relative; width: 1300px; height: 800px;"></div>
   <script src="./population.js"></script>
   <script src="./scripts.js"></script>
-  <!-- <script src="./scriptsGeo.js"></script> -->
   </body>
 </html>
